tests/ui/typeck/udvts.stderr
error: the underlying type of UDVTs must be an elementary value type
  --> $DIR/udvts.sol:1:13
   |
LL | type U01 is U01;
   |             ^^^
   |

error: the underlying type of UDVTs must be an elementary value type
  --> $DIR/udvts.sol:2:13
   |
LL | type U02 is string;
   |             ^^^^^^
   |

error: the underlying type of UDVTs must be an elementary value type
  --> $DIR/udvts.sol:3:13
   |
LL | type U03 is bytes;
   |             ^^^^^
   |

error: the underlying type of UDVTs must be an elementary value type
  --> $DIR/udvts.sol:4:13
   |
LL | type U04 is uint[];
   |             ^^^^^^
   |

error: the underlying type of UDVTs must be an elementary value type
  --> $DIR/udvts.sol:5:13
   |
LL | type U05 is U06;
   |             ^^^
   |

error: aborting due to 5 previous errors

